tests/local/function-references/let-bad.wast
(assert_invalid
  (module
    (func let)
  )
  "illegal opcode: 0x17")
